--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "kaleido==0.2.1",
     "PySide6>=6.5.3",
     "loguru>=0.7.2",
+    "art>=6.1",
 ]
 requires-python = ">=3.10,<3.12"
 readme = "README.md"
