--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "PySide6>=6.5.3",
     "loguru>=0.7.2",
     "art>=6.1",
+    "orjson>=3.9.10",
+    "numpy>=1.26.1",
 ]
 requires-python = ">=3.10,<3.12"
 readme = "README.md"
